IMPORTANT / Merge with 1.4.5